daramcorporation.com -> daramghaus.com

--- a/index_ie.html
+++ b/index_ie.html
@@ -131,7 +131,7 @@ background-repeat:no-repeat
    	<img src="images/index_icon_title.png">
 </div>
  
- <div id="ci"><a href="http://daramcorporation.com" target="_blank"><img src="images/index_ci.png"></a></div>
+ <div id="ci"><a href="http://daramghaus.com" target="_blank"><img src="images/index_ci.png"></a></div>
  
 
 </body>
