--- a/iphone/index.html
+++ b/iphone/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<meta http-equiv="Refresh" content="0; URL=http://mymenu.me/intro_iphone.html">
+<meta http-equiv="Refresh" content="0; URL=http://my-menu.github.io/intro_iphone.html">
 	
     
 <title>my menu facebook</title>
