--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
 	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="touch-icon-ipad.png" />
     <link rel="apple-touch-icon-precomposed" href="touch-icon-iphone.png" />
 	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="touch-icon-iphone4.png" />
-	<link rel="icon" href="http://mymenu.me/favicon.ico" type="image/x-icon" />
+	<link rel="icon" href="http://my-menu.github.io/favicon.ico" type="image/x-icon" />
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" type="image/x-png" href="favicon.png">
 	<title>my menu</title>
     
     <!-- Open Graph -->
     <meta property="og:title" content="my menu"/>
-    <meta property="og:image" content="http://mymenu.me/og_image.jpg"/>
+    <meta property="og:image" content="http://my-menu.github.io/og_image.jpg"/>
     <meta property="og:description" content='Share your Yummy story. My Menu is Social Menu Application.'/>
-    <meta property="og:url" content="http://mymenu.me"/>
+    <meta property="og:url" content="http://my-menu.github.io"/>
 
 	<script type="text/javascript">
 		var browserName=navigator.appName; 
